Fixed mobile safe area for chrome and safari on IOS for blog page

--- a/src/pages/blog/blog.scss
+++ b/src/pages/blog/blog.scss
@@ -2,12 +2,16 @@
   height: 100vh;
   //height: calc(var(--vh, 1vh) * 100);
   height: -webkit-fill-available;
+  height: fill-available;
+  width: fill-available;
+
+  background-color: #252839;
 }
 
 #blog_container {
   
   min-height: 100vh;
-  min-width: 100vw;
+  min-width: 100%;
   background-color: #252839;
 
   a {
@@ -122,6 +126,7 @@
       display: flex;
 
       * {
+        cursor: pointer;
         color: white;
         word-break: keep-all;
         white-space: nowrap;
@@ -133,6 +138,7 @@
     #Author {
       font-size: x-large;
       font-weight: bold;
+      margin-left: 10px;
     }
 
     #left.desktop, #right.desktop {
@@ -166,13 +172,16 @@
   }    
 
   #menu.mobile {
+    
+    overflow: hidden;
+    max-width: 100vw;
+
     #right {
       transition: right 0.35s;
 
       background: white;
-      height: auto;
       width: 75vw;
-      position: absolute;
+      position: fixed;
       
       height: 100%;
       top: 0;
@@ -190,8 +199,7 @@
       }
 
       #close {
-        background-color: red;
-        width: 40px;;
+        width: 40px;
         height: 40px;
         z-index: -100;
         top: 0;
@@ -199,6 +207,10 @@
         position: absolute;
         right: 8vw;
         top: 8vw;
+      }
+
+      #close:after {
+        content: "\00d7"; // This will render the 'X'
       }
 
     }
